Spacing fixes

--- a/dev/styles/_media.scss
+++ b/dev/styles/_media.scss
@@ -44,7 +44,7 @@
 
       .exit-button {
         position: absolute;
-        top: 5px;
+        top: 12.5px;
         right: 5px;
         z-index: 10;
         width: auto;
@@ -53,6 +53,7 @@
 
         a {
           padding: 0;
+          font-size: 1.675rem;
         }
       }
     }
