--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -449,14 +449,15 @@ footer {
         margin-top: 50px; }
       header .login .exit-button {
         position: absolute;
-        top: 5px;
+        top: 12.5px;
         right: 5px;
         z-index: 10;
         width: auto;
         height: auto;
         display: inline-block; }
         header .login .exit-button a {
-          padding: 0; }
+          padding: 0;
+          font-size: 1.675rem; }
     header .responsive {
       display: block;
       background: #f5f5f5; }
